<resources>
    <string name="app_name">Zoo Rally</string>
    <string name="zoo_augsburg" translatable="false">Zoo Augsburg</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="nav_rally">Rally</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_animals">Animals</string>
    <string name="nav_zoos">Zoos</string>
    <string name="nav_challenge">Monthly Challenge</string>
    <string name="nav_offline">Offline Content</string>
    <string name="nav_settings">Settings</string>
    <string name="question_recline">Recline</string>
    <string name="question_submit">Submit</string>
    <string name="statement_true_or_false">Is this statement true or false?</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>

    <string name="action_settings">Settings</string>
    <string name="about_header" translatable="false">DeepSpace Development</string>
    <string name="about_authors">Developed by:\n <a href="https://deepspace.onl/about-us/">Dennis Kugelmann</a> and <a href="https://deepspace.onl/about-us/">Sebastian Schneider</a>\nGraphics by:\nKlemens Schedel</string>
    <string name="action_about">About</string>
    <string name="question_text_answer">Answer</string>

    <string name="nav_map">Map</string>
    <string name="gps_prompt_enable">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="outside_zoo">You\'re currently not in the zoo.</string>
    <string name="deepspace_logo_description" translatable="false">Deepspace Logo</string>
    <string name="wgs_logo_description" translatable="false">Welfen-Gymnasium Schongau Logo</string>
    <string name="question_image_description">Image of an Animal</string>
    <string name="drag_handle_description" translatable="false">Drag Handle</string>
    <string name="zoo_image_description">Image of a zoo</string>
    <string name="zoo_map_description">Map of a zoo</string>

    <string name="back_to_quiz_description">Back to quiz</string>
    <string name="answer_scores">Scores:</string>
    <string name="answer_correct">Correct answer:</string>
    <string name="answer_user">Your Answer:</string>
    <string name="show_achievements_description">Show achievements</string>
    <string name="show_leaderboards_description">Show Leaderboards</string>

    <string name="hide_beacon_overlay_description" translatable="false">Hide Beacon Overlay</string>
    <string name="loading">Loading</string>
    <string name="gps_permission_denied">GPS Permission denied!</string>
    <string name="coming_soon">Coming soon!</string>
    <string name="app_name_beta">Zoo Rally BETA</string>
    <string name="nav_info">Information</string>
    <string name="donation_thank_you">Thank you for your donation :)</string>
    <string name="donation_something_went_wrong">Something went wrong.</string>
    <string name="action_donate">Donate</string>
    <string name="donation_text">Click on the Android Robot to support our work on this App. It was a project of our school. Creating the App took us about 400h. \n\n Thank you!</string>
    <string name="download_required">Here you can download zoos and questions.</string>
    <string name="questions">Questions</string>
    <string name="download_data_here">Download zoo and question data here.</string>
    <string name="delete_all_data">Delete all data</string>
    <string name="overlay_animals">Animals</string>
    <string name="overlay_questions">Questions</string>
    <string name="overlay_question_divider" translatable="false">:&#160;</string>
    <string name="points_suffix" translatable="false">" P"</string>

    <string name="zoo_opening_hours">Opening hours</string>
    <string name="zoo_entrance_fee">Entrance fee</string>
    <string name="zoo_arrival">Arrival</string>
    <string name="zoo_restaurants">Restaurants</string>

    <string name="type_checkbox">Multiple selection</string>
    <string name="type_radio">Easy selection</string>
    <string name="type_seekbar">Estimation</string>
    <string name="type_text">Text question</string>
    <string name="type_true_false">True-False question</string>
    <string name="type_sort">Sort question</string>

    <string name="animal_alpaca">alpaca</string>
    <string name="animal_african_ostrich">african ostrich</string>
    <string name="animal_alpine_ibex">alpine ibex</string>
    <string name="animal_american_rhea">american rhea</string>
    <string name="animal_amphibian">amphibian</string>
    <string name="animal_antelope">antelope</string>
    <string name="animal_asian_elephant">asian elephant</string>
    <string name="animal_baboon">baboon</string>
    <string name="animal_bear">bear</string>
    <string name="animal_beaver">beaver</string>
    <string name="animal_bennett">bennett</string>
    <string name="animal_bird">bird</string>
    <string name="animal_black_lemur">black lemur</string>
    <string name="animal_blesbok">blesbok</string>
    <string name="animal_brown_bear">brown bear</string>
    <string name="animal_buffalo">buffalo</string>
    <string name="animal_capuchin">capuchin</string>
    <string name="animal_cavy">cavy</string>
    <string name="animal_chimpanzee">chimpanzee</string>
    <string name="animal_chinese_muntjac">chinese muntjac</string>
    <string name="animal_coati">coati</string>
    <string name="animal_cow">cow</string>
    <string name="animal_crane">crane</string>
    <string name="animal_dahome_cow">dahomé cow</string>
    <string name="animal_degus">degus</string>
    <string name="animal_donkey">donkey</string>
    <string name="animal_duck">duck</string>
    <string name="animal_east_caucasian_tur">east caucasian tur</string>
    <string name="animal_elephant">elephant</string>
    <string name="animal_emu">emu</string>
    <string name="animal_fennec">fennec</string>
    <string name="animal_flamingo">flamingo</string>
    <string name="animal_glossy_ibis">glossy ibis</string>
    <string name="animal_goat">goat</string>
    <string name="animal_great_gray_owl">great gray owl</string>
    <string name="animal_grevys_zebra">grevys zebra</string>
    <string name="animal_ground_hornbill">ground hornbill</string>
    <string name="animal_hamadryas_baboon">hamadryas baboon</string>
    <string name="animal_hyena">hyena</string>
    <string name="animal_ibex">ibex</string>
    <string name="animal_ibis">ibis</string>
    <string name="animal_kangaroo">kangaroo</string>
    <string name="animal_lemur">lemur</string>
    <string name="animal_leopard">leopard</string>
    <string name="animal_leopard_cat">leopard cat</string>
    <string name="animal_lesser_flamingo">lesser flamingo</string>
    <string name="animal_lion">lion</string>
    <string name="animal_magellanic_penguin">magellanic penguin</string>
    <string name="animal_mandrill">mandrill</string>
    <string name="animal_maned_wolf">maned wolf</string>
    <string name="animal_meerkat">meerkat</string>
    <string name="animal_miniature_donkey">miniature donkey</string>
    <string name="animal_mishmi_takin">mishmi takin</string>
    <string name="animal_mountain_goat">mountain goat</string>
    <string name="animal_muntjac">muntjac</string>
    <string name="animal_native_amphibian">native amphibian</string>
    <string name="animal_native_fish">native fish</string>
    <string name="animal_snake">snake</string>
    <string name="animal_nilgai">nilgai</string>
    <string name="animal_onager">onager</string>
    <string name="animal_ostrich">ostrich</string>
    <string name="animal_otter">otter</string>
    <string name="animal_owl">owl</string>
    <string name="animal_pelican">pelican</string>
    <string name="animal_penguin">penguin</string>
    <string name="animal_pony">pony</string>
    <string name="animal_rabbit">rabbit</string>
    <string name="animal_red_buffalo">red buffalo</string>
    <string name="animal_rhino">rhino</string>
    <string name="animal_ring_tailed_lemur">ring tailed lemur</string>
    <string name="animal_scarlet_ibis">scarlet ibis</string>
    <string name="animal_sea_bear">sea bear</string>
    <string name="animal_seal">seal</string>
    <string name="animal_stork">stork</string>
    <string name="animal_striped_hyena">striped hyena</string>
    <string name="animal_sulcata_tortoise">sulcata tortoise</string>
    <string name="animal_sumatran_tiger">sumatran tiger</string>
    <string name="animal_takin">takin</string>
    <string name="animal_tiger">tiger</string>
    <string name="animal_tortoise">tortoise</string>
    <string name="animal_tropic_bird">tropic bird</string>
    <string name="animal_water_buffalo">water buffalo</string>
    <string name="animal_water_fowl">water fowl</string>
    <string name="animal_wolf">wolf</string>
    <string name="animal_zebra">zebra</string>
    <string name="animal_reptile">reptile</string>

    <string name="zoo_beacon_open_air">Open-Air enclosure</string>
    <string name="zoo_beacon_animal_house">Animal house</string>
    <string name="animal_cormorant">cormorant</string>
    <string name="stop_rally">Stop Rally</string>
    <string name="answered_questions">Answered Questions</string>
    <string name="remaining_questions">Remaining Questions</string>
    <string name="really_stop_rally">Do you really want to stop the rally?</string>
    <string name="stop_rally_yes">Yes</string>
    <string name="stop_rally_no">No</string>
    <string name="thanks_for_participating">Thanks for participating, your Score:</string>
    <string name="share_with_friends">Share with Friends</string>
    <string name="back_to_rallly">Back to Rallly</string>
    <string name="current_score">Current score</string>
</resources>
