<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_rally"
              android:title="@string/nav_rally" />

        <item android:id="@+id/nav_map"
            android:title="@string/nav_map" />

        <item android:id="@+id/nav_statistics"
              android:icon="@drawable/ic_restore_black_24dp"
              android:title="@string/nav_statistics" />

        <item android:id="@+id/nav_animals"
              android:title="@string/nav_animals" />

        <item android:id="@+id/nav_zoos"
              android:title="@string/nav_zoos" />

        <item android:id="@+id/nav_challenge"
              android:title="@string/nav_challenge" />

        <item android:id="@+id/nav_offline"
              android:icon="@drawable/ic_offline_pin_black_24dp"
              android:title="@string/nav_offline" />

        <item android:id="@+id/nav_settings"
              android:icon="@drawable/ic_setting_light"
              android:title="@string/nav_settings" />

    </group>

</menu>
