<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical">

    <!-- TODO support elevation pre Lollipop -->
    <ImageView
        android:id="@+id/question_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/question_image_height"
        android:elevation="@dimen/question_image_elevation"
        android:background="@color/question_image_background"
        android:src="@drawable/wolf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/question_text_size"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/statement_true_or_false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/question_true_false"
        android:textSize="40sp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- TODO support colored buttons in pre Lollipop -->
        <Button
            android:id="@+id/answer_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/answerTrue"
            android:text="@string/answer_true"/>
        <Button
            android:id="@+id/answer_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/answerFalse"
            android:text="@string/answer_false"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_recline"
        android:id="@+id/recline_true_false" />

</LinearLayout>
