<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView
        android:id="@+id/question_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/question_image_elevation">
        <ImageView
            android:id="@+id/question_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/question_image_height"
            android:background="@color/question_image_background"
            android:contentDescription="@string/question_image_description"
            android:src="@drawable/animal_wolf" />
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textSize="@dimen/question_text_size" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/question_text_answer"
            android:hint="@string/question_text_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/recline_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_recline" />

        <Button
            android:id="@+id/submit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@id/recline_text"
            android:text="@string/question_submit" />
    </RelativeLayout>
</LinearLayout>