<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context="onl.deepspace.zoorallye.questions.AnswerFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="@dimen/question_image_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/answer_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/answer_image_height"
                android:background="@color/question_image_background"
                android:contentDescription="@string/question_image_description"
                android:src="@drawable/animal_wolf" />

            <TextView
                android:id="@+id/answer_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:gravity="center_horizontal"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                android:text="@string/answer_user"/>

            <TextView
                android:id="@+id/answer_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="17sp"
                android:text="@string/answer_correct"/>

            <TextView
                android:id="@+id/answer_correct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:textSize="22sp"
                android:text="@string/answer_scores"/>

            <TextView
                android:id="@+id/answer_scores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <ImageView
                    android:id="@+id/answer_forward"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:contentDescription="@string/back_to_quiz_description"
                    android:src="@drawable/ic_arrow_forward"/>
            </FrameLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
