<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:id="@+id/question_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/question_image_elevation">
            <ImageView
                android:id="@+id/question_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/question_image_height"
                android:background="@color/question_image_background"
                android:contentDescription="@string/question_image_description"
                android:src="@drawable/img_drawer" />
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="@dimen/question_text_size" />

        <LinearLayout
            android:id="@+id/container_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_recline"
                android:id="@+id/recline_checkbox" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_submit"
                android:id="@+id/submit_checkbox"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/recline_checkbox"
                android:layout_toEndOf="@id/recline_checkbox" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
